--- a/electroServer/tsconfig.json
+++ b/electroServer/tsconfig.json
@@ -10,6 +10,8 @@
         "module": "nodenext",
         "target": "esnext",
         "types": [],
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
         // For nodejs:
         // "lib": ["esnext"],
         // "types": ["node"],
