--- a/electroServer/package.json
+++ b/electroServer/package.json
@@ -16,9 +16,11 @@
         "@prisma/client": "^6.18.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "zod": "^4.1.12"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.19",
         "@types/express": "^5.0.5",
         "@types/node": "^24.10.0",
         "prisma": "^6.18.0",
@@ -27,5 +29,6 @@
     },
     "prisma": {
         "schema": "prisma/schema.prisma"
-    }
+    },
+    "type": "module"
 }
