--- a/electroServer/package.json
+++ b/electroServer/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "dev": "tsx watch src/server.ts",
         "build": "tsc",
         "start": "node dist/server.js"
     },
@@ -25,6 +25,7 @@
         "@types/node": "^24.10.0",
         "prisma": "^6.18.0",
         "ts-node-dev": "^2.0.0",
+        "tsx": "^4.20.6",
         "typescript": "^5.9.3"
     },
     "prisma": {
