--- a/electroServer/tsconfig.json
+++ b/electroServer/tsconfig.json
@@ -13,11 +13,9 @@
         // "types": [],
         // "esModuleInterop": true,
         // "resolveJsonModule": true,
-        // "allowSyntheticDefaultImports": true,
-
-        "target": "ESNext",
         "module": "NodeNext",
-        "moduleResolution": "nodenext",
+        "moduleResolution": "NodeNext",
+        "target": "ES2020",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
