--- a/electroServer/package.json
+++ b/electroServer/package.json
@@ -23,6 +23,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.5",
         "@types/node": "^24.10.0",
+        "prettier": "^3.6.2",
         "prisma": "^6.18.0",
         "ts-node-dev": "^2.0.0",
         "tsx": "^4.20.6",
